# BitStack

./: .gitignore  README.md  fused_forward.py  main.py  pyproject.toml
bitstack/: main.py
bitstack/modules/: BitStackLinear.py
bitstack/utils/: decompose.py  inference_utils.py  model_utils.py  pack_utils.py  scale_utils.py
modules/: BitStackLinear.py
scripts/: decompose.sh  download.sh  evaluate.sh
utils/: data_utils.py  decompose.py  model_utils.py  pack_utils.py  scale_utils.py
