[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bitstack"
version = "0.1.0"
description = "Implementation of BitStack: Fine-Grained Size Control for Compressed Large Language Models in Variable Memory Environments"
readme = "README.md"
authors = [
    {name = "Xinghao Wang", email = "xinghaow99@gmail.com"}
]
dependencies = [
    "torch",
    "transformers==4.45.2",
    "accelerate",
    "datasets",
    "lm_eval==0.4.5",
    "tqdm",
    "matplotlib",
    "gradio",
    "sentencepiece",
    "protobuf"
]
[tool.setuptools.packages.find]
where = ["bitstack"]